# django-askon

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
askon/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_resenha_estrela.py  0002_generos_jogos_genero.py  0002_jogos_imagem_alter_comentario_data_and_more.py  0003_alter_resenha_estrela.py  0003_resenha_imagem_resenha.py  0004_usuario_imagem_perfil.py  0005_remove_resenha_estrela_resenha_nota_audio_and_more.py
core/models/: __init__.py  comentarios.py  curtidas.py  generos.py  jogos.py  resenhas.py  usuarios.py
core/paginations/: __init__.py  resenhas.py
core/serializers/: __init__.py  comentarios.py  curtidas.py  generos.py  jogos.py  resenhas.py  usuarios.py
core/views/: __init__.py  comentarios.py  curtidas.py  detail.py  generos.py  jogos.py  meuUsuario.py  resenhas.py  usuarios.py
