[tool.poetry]
name = "gui"
version = "0.1.0"
description = ""
authors = ["guilhermealbanaz <guibragatoalbnz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.1"
drf-spectacular = "^0.24.2"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.4"
django-decouple = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
